--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-body, button {
-    font-family: verdana;
+body, button, input {
+    font-family: verdana, sans-serif;
 }
 body {
     background-color: rgb(227, 248, 255);
@@ -9,8 +9,9 @@ button {
     margin-bottom: 5px;
     background-color:black;
     color: white;
-    border: 3px solid black;
+    border: 3px solid rgb(151, 151, 151);
     transition: 0.2s;
+    font-size: 15px;
 }
 button:hover {
     background-color: rgb(88, 88, 88);
@@ -21,10 +22,14 @@ button:hover {
 input {
     margin-bottom: 6px;
     width: 125px;
+    font-size: 15px;
 }
 h3 {
     background-color: black;
     color:white;
+    margin: 7px;
+    margin-bottom: 10px;
+    padding-bottom: 2px;
 }
 .meny {
     background-color: white;
