--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ h3 {
     margin-bottom: 10px;
     padding-bottom: 2px;
 }
-.meny {
+.menu {
     background-color: white;
     text-align: center;
     border: 2px solid white;
